apps/dish-lab-frontend/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: dish-lab-frontend
  namespace: apps
spec:
  selector:
    app: dish-lab-frontend
  ports:
    - port: 80
      targetPort: 80
